[package]
name = "simplealloc"
version = "0.1.0"
authors = ["mdeniaud <mathieu.deniaud@crossknowledge.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
win32 = { path = "../win32"}

[profile.dev]
panic = "abort"
